--- a/Lesson8/learningLog/learningLogs/templates/learningLogs/topics.html
+++ b/Lesson8/learningLog/learningLogs/templates/learningLogs/topics.html
@@ -12,4 +12,7 @@
             <li>No topics have been added yet.</li>
         {% endfor %}
     </ul>
+
+    <a href="{% url 'learningLogs:new_topic' %}">Add a new topic</a>
+
 {% endblock content %}
