--- a/Lesson8/learningLog/learningLogs/templates/learningLogs/base.html
+++ b/Lesson8/learningLog/learningLogs/templates/learningLogs/base.html
@@ -1,7 +1,12 @@
 <p>
     <a href="{% url 'learningLogs:index' %}">Learning Log</a> -
     <a href="{% url 'learningLogs:topics' %}">Topics</a>
+    {% if user.is_authenticated %}
+        Hello, {{ user.username }}.
+        <a href="{% url 'users:logout' %}">Log out</a>
+    {% else %}
+        <a href="{% url 'users:register' %}">Register</a> -
+        <a href="{% url 'users:login' %}">Log in</a>
+    {% endif %}
 </p>
-{% block content %}
-
-{% endblock content %}
+{% block content %}{% endblock content %}
