--- a/Lesson8/learningLog/learningLogs/templates/learningLogs/topic.html
+++ b/Lesson8/learningLog/learningLogs/templates/learningLogs/topic.html
@@ -3,14 +3,22 @@
 {% block content %}
     <p>Topic: {{ topic }}</p>
 
+    <p>Entries:</p>
+    <p>
+        <a href="{% url 'learningLogs:new_entry' topic.id %}">Add new entry</a>
+    </p>
     <ul>
         {% for entry in entries %}
             <li>
                 <p> {{ entry.date_added|date:'M d, Y H:i' }} </p>
                 <p> {{ entry.text|linebreaks }} </p>
+                <p>
+                    <a href="{% url 'learningLogs:edit_entry' entry.id %}">Edit entry</a>
+                </p>
             </li>
         {% empty %}
             <li>No topics have been added yet.</li>
         {% endfor %}
     </ul>
+
 {% endblock content %}
