--- a/Lesson8/learningLog/learningLogs/templates/learningLogs/edit_entry.html
+++ b/Lesson8/learningLog/learningLogs/templates/learningLogs/edit_entry.html
@@ -1,12 +1,17 @@
 {% extends "learningLogs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+    <h3> Edit entry for <a href="{% url 'learningLogs:topic' topic.id %}">{{ topic }}</a></h3>
+{% endblock page_header %}
+
 {% block content %}
-    <p><a href="{% url 'learningLogs:topic' topic.id %}">{{ topic }}</a></p>
-    
-    <p>Edit entry:</p>
- 
-    <form action="{% url 'learningLogs:edit_entry' entry.id %}" method='post'>
+
+    <form textarea="{% url 'learningLogs:edit_entry' entry.id %}" method='post'>
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name="submit">Save changes</button>
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button name="submit" class= "btn btn-primary">Edit entry</button>
+        {% endbuttons %}
     </form>
 {% endblock content %}
