--- a/Lesson8/learningLog/learningLogs/templates/learningLogs/new_entry.html
+++ b/Lesson8/learningLog/learningLogs/templates/learningLogs/new_entry.html
@@ -1,12 +1,18 @@
 {% extends "learningLogs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+    <h3> Add a new entry for <a href="{% url 'learningLogs:topic' topic.id %}">{{ topic }}</a></h3>
+{% endblock page_header %}
+
 {% block content %}
-    <p><a href="{% url 'learningLogs:topic' topic.id %}">{{ topic }}</a></p>
  
-    <p>Add a new entry:</p>
     <form action="{% url 'learningLogs:new_entry' topic.id %}" method='post'>
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name='submit'>Add entry</button>
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button name="submit" class= "btn btn-primary">Add entry</button>
+        {% endbuttons %}
     </form>
  
 {% endblock content %}
