--- a/Lesson8/learningLog/learningLogs/templates/learningLogs/topic.html
+++ b/Lesson8/learningLog/learningLogs/templates/learningLogs/topic.html
@@ -1,23 +1,26 @@
 {% extends "learningLogs/base.html" %}
 
-{% block content %}
-    <p>Topic: {{ topic }}</p>
+{% block page_header %}
+    <h3>{{ topic }}</h3>
+{% endblock page_header %}
 
-    <p>Entries:</p>
+{% block content %}
     <p>
         <a href="{% url 'learningLogs:new_entry' topic.id %}">Add new entry</a>
     </p>
     <ul>
         {% for entry in entries %}
-            <li>
-                <p> {{ entry.date_added|date:'M d, Y H:i' }} </p>
-                <p> {{ entry.text|linebreaks }} </p>
-                <p>
-                    <a href="{% url 'learningLogs:edit_entry' entry.id %}">Edit entry</a>
-                </p>
-            </li>
+            <div class="card mb-3">
+                <h4 class="card-header">
+                    {{ entry.date_added|date:'M d, Y H:i' }}
+                    <small><a href="{% url 'learningLogs:edit_entry' entry.id %}">edit entry</a></small>
+                </h4>
+                <div class="card-body">
+                    {{ entry.text|linebreaks }}
+                </div>
+            </div>
         {% empty %}
-            <li>No topics have been added yet.</li>
+            <p>There are no entries for this topic yet.</p>
         {% endfor %}
     </ul>
 
